NAVBAR FINALLY DONE

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -105,25 +105,33 @@
   const trigger = document.getElementById("menu-trigger");
   const menu = document.getElementById("menu-drop-down");
 
-  trigger.addEventListener("click", () => {
-    if(menu.style.display == "none"){
-      menu.style.display = "block";
-    } else {
-      menu.style.display = "none";
+  trigger.addEventListener("mouseover", () => {
+   menu.style.display = "block";
     }
 
-  });
+  );
+
+   menu.addEventListener("mouseout", () => {
+   if (menu.style.display == "block")
+    menu.style.display = "none";
+    }
+
+  );
 
   const mobtrigger = document.getElementById("mobile-trigger");
   const mobmenu = document.getElementById("mobile-drop-down");
 
-  mobtrigger.addEventListener("click", () => {
-    if(mobmenu.style.display == "none"){
+  mobtrigger.addEventListener("mouseover", () => {
       mobmenu.style.display = "block";
-    } else {
-      mobmenu.style.display = "none";
     }
 
-  });
+  );
+
+  mobmenu.addEventListener("mouseout", () => {
+   if (mobmenu.style.display == "block")
+    mobmenu.style.display = "none";
+    }
+
+  );
 
 </script>
