--- a/app/assets/stylesheets/components/_ticket_listings.scss
+++ b/app/assets/stylesheets/components/_ticket_listings.scss
@@ -43,6 +43,8 @@
   // font-size: 14px;
   display: flex;
   align-items: center;
+  padding: 5px 5px;
+  border-bottom: 2px solid $black;
 }
 .container-upcoming-tickets{
   // border: 0.5px dotted $green;
@@ -50,7 +52,7 @@
   opacity: 0.85;
   // position: relative;
   // display: block;
-  border-radius: 80px;
+  border-radius: 5px;
   // box-shadow: 0 1px 1px rgba(0,0,0,0.1);
   // align-self: flex-start;
   margin: 20px 10px;
@@ -91,26 +93,28 @@
 
 }
 .ticket-description{
-  padding: 0 20px;
+  padding: 10px 20px;
   vertical-align: top;
   width: 100%;
   display: table-cell;
-  /*  border-right: 0.5px solid #CFD4D9;*/
+  border-right: 0.5px solid #CFD4D9;
+  text-align: left;
 }
-.ticket-description-container{
-  vertical-align: top;
-  margin-top: 10px;
-}
+// .ticket-description-container{
+//   vertical-align: top;
+//   margin-top: 10px;
+// }
 .ticket-link-to-show-page{
   color: #4cb289;
   font-size: 16px;
   text-decoration: none;
   cursor: pointer;
   font-weight: bolder;
+  margin: 5px 0;
 }
 .ticket-details{
-  margin-top: 12px;
-  font-size: 12px;
+  margin: 12px 0;
+  font-size: 14px;
   color: #828282;
   overflow: hidden;
   max-height: 45px;
