--- a/app/assets/stylesheets/layouts/_map.scss
+++ b/app/assets/stylesheets/layouts/_map.scss
@@ -5,6 +5,7 @@
     position: sticky !important;
     width: 100%;
     height: 100vh;
+    top: 0px;
   }
 }
 @media (max-width: 923px){
@@ -12,6 +13,7 @@
     flex: 0 0 450px;
     position: sticky !important;
     width: 100%;
-    height: 350px;
+    height: 100vh;
+    top: 0px;
   }
 }
