--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -37,27 +37,27 @@
 
         <div class="container-upcoming-tickets">
           <% @tickets.each do |ticket| %>
-            <div class="ticket-container">
-              <div class="ticket-profile">
-                <%= cl_image_tag current_user.photo, width: 80, height: 80, class: 'circle-avatar' %>
-              </div>
-              <div class="ticket-description">
-                <div class="ticket-link-to-show-page">
-                  <%= ticket.event.name %>
+            <%= link_to ticket_bookings_path(ticket.id), method: :post do %>
+              <div class="ticket-container">
+                <div class="ticket-profile">
+                  <%= cl_image_tag current_user.photo, width: 80, height: 80, class: 'circle-avatar' %>
                 </div>
-                <div class="ticket-details">
-                  <%= ticket.description %>
+                <div class="ticket-description">
+                  <div class="ticket-link-to-show-page">
+                    <span><%= ticket.event.name %></span>
+                  </div>
+                  <div class="ticket-details">
+                    <%= ticket.description %>
+                  </div>
+                </div>
+                <div class="ticket-price">
+                  <div class="price">
+                    <strong>£<%= ticket.price %></strong>
+                      <i class="fas fa-shopping-cart"></i>
+                  </div>
                 </div>
               </div>
-              <div class="ticket-price">
-                <div class="price">
-                  <strong>£<%= ticket.price %></strong>
-                  <%= link_to ticket_bookings_path(ticket.id), method: :post do %>
-                    <i class="fas fa-shopping-cart"></i>
-                  <% end %>
-                </div>
-              </div>
-            </div>
+            <% end %>
           <% end %>
         </div>
       <% end %>
