--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -73,11 +73,14 @@
   font-size: 18px;
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
-}
-.navbar-wagon-link:hover {
- color: $white;
- opacity: 0.7;
- text-decoration: none;
+  &:hover {
+    color: $white;
+    text-decoration: none;
+    transition: all .25s ease-in-out;
+    -ms-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+  }
 }
 
 /* Dropdown menu */
