--- a/app/assets/stylesheets/pages/_list-ticket.scss
+++ b/app/assets/stylesheets/pages/_list-ticket.scss
@@ -2,19 +2,18 @@
   .create-container {
     width: 50%;
     margin: 60px auto;
-    padding-top: 20px;
+
   }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .create-container {
     width: 70%;
     margin: 50px auto;
-    padding-top: 20px;
   }
 }
 @media (max-width: 767px) {
   .create-container {
-    width: 90%;
+    width: 100%;
     margin: 20px auto;
     padding-top: 20px;
   }
@@ -83,18 +82,17 @@
   width: 70%;
   margin: 0 20px 0 0;
 }
+.form-60{
+  width: 60%;
+}
 .form-50{
   width: 50%;
 }
 .form-40{
   width: 40%;
-  margin: 0 20px 0 0;
 }
 .form-30{
   width: 30%;
-}
-.form-30:last-child{
-  margin: 0 0 0 20px;
 }
 .flex-row{
   width: 100%;
@@ -136,26 +134,25 @@
   padding: 0 15px !important;
 }
 .date-style .form-inline .form-control  {
-  width: 33% !important;
   margin: 0 !important;
 }
 .date-style .form-inline .form-control:nth-child(2) {
-  margin: 0 20px !important;
+  margin: 0 5px !important;
 }
 .ticket_photo{
   font-size: 0px !important;
 }
-#ticket_photo{
-  border-radius: 6px !important;
-  background-color: #61CA9D !important;
-  color: #FFF !important;
-  text-transform: uppercase !important;
-  width: 100px !important;
-  margin: 0 0 0 auto !important;
-  line-height: 40px !important;
-  font-size: 14px !important;
-  text-align: center !important;
-}
+// #ticket_photo{
+//   border-radius: 6px !important;
+//   background-color: #61CA9D !important;
+//   color: #FFF !important;
+//   text-transform: uppercase !important;
+//   width: 100px !important;
+//   margin: 0 0 0 auto !important;
+//   line-height: 40px !important;
+//   font-size: 14px !important;
+//   text-align: center !important;
+// }
 .fake-btn{
   border-radius: 6px !important;
   background-color: #B3BEC5;
@@ -175,6 +172,7 @@
 
 .form-group{
   margin-bottom: 25px;
+  font-size: 14px !important;
 }
 .form-control{
   border-radius: 2px;
@@ -195,6 +193,18 @@
   color: #4cb289;
   bottom: 80px;
   font-family: sans-serif;
+}
+#event_date_and_time_1i{
+  font-size:12px !important;
+  width: 30%;
+}
+#event_date_and_time_2i{
+  font-size: 12px !important;
+  width: 50%;
+}
+#event_date_and_time_3i{
+  font-size: 12px !important;
+  width: 20%;
 }
 
 
