--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,7 +15,7 @@
 }
 
 .event-index-card-by-venue{
- background-color: $white;
+ background-size: cover;
  opacity: 0.9;
  min-height: 200px;
  min-width: 250px;
