--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -31,7 +31,7 @@
 
 <!-- WATCHLIST -->
 
-<%= render 'dashboard-watching' %>
+<%= render 'dashboard-watching', watchlists: @watchlists %>
 
 <%= javascript_pack_tag "dashboard" %>
 
