--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
 
  <%= render 'shared/flashes' %>
  <%= yield %>
- <%= javascript_pack_tag "application" %>
+
+  <%= javascript_include_tag "application" %>
+  <%= javascript_pack_tag "application" %>
 
 
 </body>
