--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,7 @@
     <div class="col-sm-6 col-md-4">
 
       <div class="event-index-card-by-venue">
-        <div class="venue-name-link"><%= link_to event.name, event_path(event) %></div>
+        <div class="venue-name-link"><%= link_to event.name, event_path(event), class: 'venue-name-link-text' %></div>
         <p><%= event.category %></p>
       </div>
 
