--- a/app/views/pages/_dashboard-watching.html.erb
+++ b/app/views/pages/_dashboard-watching.html.erb
@@ -6,7 +6,7 @@
 
       <div class="container-upcoming-dashboards">
         <div class="container-header-section">
-          <div class="container-header-text">
+          <div class="container-header-text" id="watching-list">
             <span class="results-query">
               Keep an eye on your watchlist
               <i class="fas fa-heart" style= 'color:red'></i>
@@ -24,7 +24,7 @@
             </div>
           </div>
         </div>
-        <div class="container-body">
+        <div class="container-body" >
 
           <div class="dashboard-grouped-container">
 
