--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -65,7 +65,7 @@
 
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to "Find out more", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Help", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
