list_ticket_css

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,7 @@
 @import "navbar";
 @import "banner";
 @import "card";
-@import "list_form";
+@import "new_ticket_event";
 @import "dashboard";
 @import "dashboard_listings";
 @import "ticket_listings";
