--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -10,7 +10,7 @@
   <div class="container-header-section">
     <div class="container-header-text">
       <span class="results-query">
-        Take a peak at results for
+        Take a peek at results for
       </span>
       <span class="results-location-query">
         <strong>"user-search-query"</strong>
