--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container add-navbar-padding">
   <% if current_user[:photo] == nil  %>
     <h1> Please upload a profile photo</h1>
     <%= render 'edit_form' %>
