--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   color: white;
   text-align: center;
-  min-height: 100vh;
+  height: 100vh;
   background-size: cover !important;
   .banner-content-container {
     display: flex;
@@ -12,7 +12,7 @@
   .banner-content {
     width: 500px;
   }
-  #query {
+  #search {
     width: 90%;
     margin: auto;
   }
@@ -24,10 +24,9 @@
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
 .banner p {
-  font-size: 25px;
+  font-size: 30px;
   font-weight: lighter;
-  color: rgb(255, 255, 255);
-  opacity: 0.7;
+  color: $light-green;
 }
 .banner {
   display: flex;
@@ -45,23 +44,13 @@
   margin: 10px 0 20px 0;
 }
 .btn-home-search {
-  border-radius: 6px;
-  background-color: $green;
-  color: #FFF;
+  border-radius: 10px;
   text-transform: uppercase;
-  width: 80px;
-  margin: 0 0 0 auto;
-  line-height: 30px;
-  font-size: 14px;
-  text-align: center;
-  z-index:100;
+  width: 120px;
   border: none;
-    &:hover{
-      opacity: 0.8;
-    }
-}
-.banner-typed-text{
-  color:white;
+  &:hover{
+    background-color: $light-green;
+  }
 }
 
 // Ticket Banner //
@@ -82,7 +71,7 @@
   }
 }
 .banner-venue{
-  padding: 50px 50px;
+  padding: 110px 50px 50px 50px;
   text-align: center;
   color: white;
   opacity: 0.95;
