--- a/app/assets/stylesheets/pages/_shared.scss
+++ b/app/assets/stylesheets/pages/_shared.scss
@@ -1,6 +1,9 @@
 html, body {
   height: 100%; /*Fixes the height to 100% of the viewport*/
 }
-body {
-  padding-top: 70px; /*50px for the height of the navbar + 37px for the offset*/
+// body {
+//   padding-top: 60px; /*50px for the height of the navbar + 37px for the offset*/
+// }
+.add-navbar-padding {
+  padding-top: 60px;
 }
