--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,51 +1,50 @@
-<div class="new-ticket-container">
-  <% if current_user[:photo] == nil  %>
-    <h1>*********************</h1>
-    <h1> Please upload a profile photo</h1>
-    <%= render 'edit_form' %>
-  <% else %>
-    <% if @ticket.errors.any? %>
-      <ul>
-        <% @ticket.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-        <% end %>
-      </ul>
-    <% end %>
-
-    <%= form_tag(new_ticket_path, method: 'get', class: 'list-ticket-form') do %>
-      <%= text_field_tag :search_event, params[:search_event], placeholder: "Check if your event exists...", class: "form-control", :onchange => "this.form.submit();" %>
-    <% end %>
-
-    <h6><%= link_to "Can't Find Your Event?", new_event_path %></h6>
-
-    <div class="search-results">
-      <% if @events != nil %>
-        <div class="row">
-          <% @events.each do |event| %>
-            <div class="col-xs-12 col-md-6 col-lg-6">
-              <div class="event-card" style="background-image: url(<%= cl_image_path(event.photo_file, crop: :fill) %>)">
-                <h3><%= event.name %> @ <%= event.address %></h3>
-                <li><%= event.category %></li>
-                <li><%= event.date_and_time.strftime('%a %d %b %Y') %><%= link_to " (My event is on another date)", new_event_path(content: "hello") %></li>
-
-                <% if event.quantity == 0 %>
-                  <li>Tickets for this event have sold out!</li>
-                <% else %>
-                  <li><%= event.quantity %> tickets are currently listed</li>
-                <% end %>
-
-                <%= render 'list_ticket_form', event: event, ticket: @ticket %>
-              </div>
-            </div>
+<div class="add-navbar-padding">
+  <div class="new-ticket-container">
+    <% if current_user[:photo] == nil  %>
+      <h1>*********************</h1>
+      <h1> Please upload a profile photo</h1>
+      <%= render 'edit_form' %>
+    <% else %>
+      <% if @ticket.errors.any? %>
+        <ul>
+          <% @ticket.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
           <% end %>
-        </div>
+        </ul>
       <% end %>
-    </div>
-  <% end %>
+
+      <%= form_tag(new_ticket_path, method: 'get', class: 'list-ticket-form') do %>
+        <%= text_field_tag :search_event, params[:search_event], placeholder: "Check if your event exists...", class: "form-control", :onchange => "this.form.submit();" %>
+      <% end %>
+
+      <h6><%= link_to "Can't Find Your Event?", new_event_path %></h6>
+
+      <div class="search-results">
+        <% if @events != nil %>
+          <div class="row">
+            <% @events.each do |event| %>
+              <div class="col-xs-12 col-md-6 col-lg-6">
+                <div class="event-card" style="background-image: url(<%= cl_image_path(event.photo_file, crop: :fill) %>)">
+                  <h3><%= event.name %> @ <%= event.address %></h3>
+                  <li><%= event.category %></li>
+                  <li><%= event.date_and_time.strftime('%a %d %b %Y') %><%= link_to " (My event is on another date)", new_event_path(content: "hello") %></li>
+
+                  <% if event.quantity == 0 %>
+                    <li>Tickets for this event have sold out!</li>
+                  <% else %>
+                    <li><%= event.quantity %> tickets are currently listed</li>
+                  <% end %>
+
+                  <%= render 'list_ticket_form', event: event, ticket: @ticket %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-
-
 
 
 <!-- Include AlgoliaSearch JS Client and autocomplete.js library -->
