event save, profile edit

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
 
 
       <div class="event-index-card-by-venue" style="background-image: url(<%= cl_image_path(event.photo_file, crop: :fill) %>)">
-        <div class="venue-name-link"><%= link_to event.name, event_path(event), class: 'venue-name-link-text' %></div>
+        <div class="venue-name-link"><%= link_to event.name, events_path(event), class: 'venue-name-link-text' %></div>
 
         <p><%= event.category %></p>
       </div>
