--- a/app/assets/stylesheets/pages/_list-ticket.scss
+++ b/app/assets/stylesheets/pages/_list-ticket.scss
@@ -198,6 +198,10 @@
   font-size:12px !important;
   width: 30%;
 }
+#event_date_and_time_1i:nth-child .option{
+  display: none;
+}
+
 #event_date_and_time_2i{
   font-size: 12px !important;
   width: 50%;
