--- a/app/views/pages/_dashboard-purchases.html.erb
+++ b/app/views/pages/_dashboard-purchases.html.erb
@@ -37,6 +37,7 @@
                   <%= link_to ticket_file_path(photo: booking.ticket.photo )  do %>
                   <p class="voucher-photo"><i class="far fa-file fa-4x"></i></p>
                   <% end %>
+                  <p class='text-center view-text-ticket'> View </p>
                 </div>
               </div>
 
