--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -118,6 +118,9 @@
   cursor: pointer;
   font-weight: bolder;
   margin-top: 2px;
+  &:hover{
+    opacity: 0.8;
+  }
 }
 .dashboard-details{
   font-size: 12px;
@@ -133,9 +136,13 @@
   display: table-cell;
   border-right: 0.5px solid #CFD4D9;
 }
+.fas {
+  // font-weight: 100 !important;
+}
 .fa-heart{
   color: palevioletred;
   cursor: pointer;
+  font-weight: 0;
 }
 .fa-heart:hover{
   color: orangered;
@@ -166,7 +173,7 @@
   color: #65B891;
   margin: 0;
 }
-.dashboard-price .dashboards-left{
+.dashboard-price .events-left{
   font-size: 12px;
   color: #D26478;
   letter-spacing: 0.4px;
@@ -174,7 +181,7 @@
 }
 .posted-on-text{
   font-size: 14px;
-  padding-left: 8px;
+  padding-left: 10px;
 }
 .booking-ticket-date{
   font-size:14px;
@@ -189,3 +196,29 @@
     color: $green;
   }
 }
+.voucher-photo{
+  padding-left: 5px;
+}
+.view-text-ticket{
+  text-decoration: none;
+  color: $green;
+  &:hover{
+    text-decoration: none;
+    opacity: 0.9;
+    cursor: pointer;
+  }
+}
+
+button{
+  width: 100px;
+  height: 50px;
+  position: relative;
+}
+
+button{
+  width: 100px;
+  height: 50px;
+  position: relative;
+}
+
+
