--- a/app/assets/stylesheets/components/_event_listings.scss
+++ b/app/assets/stylesheets/components/_event_listings.scss
@@ -99,6 +99,9 @@
   text-decoration: none;
   cursor: pointer;
   font-weight: bolder;
+  &:hover{
+    opacity: 0.9;
+  }
 }
 .event-details{
   margin-top: 12px;
@@ -109,7 +112,6 @@
   line-height: 15px;
 }
 .event-watch{
-  padding: 20px;
   vertical-align: top;
   width: 100%;
   display: table-cell;
@@ -126,9 +128,7 @@
   -webkit-transform: scale(1.40);
   transform: scale(1.40);
 }
-.fa-heart:visited{
-  color: orangered;
-}
+
 .event-price{
   min-width: 80px;
   padding-right: 10px;
@@ -152,3 +152,7 @@
   letter-spacing: 0.4px;
   font-weight: bolder;
 }
+.sold-out-text{
+  margin-top: 20px;
+}
+
