--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,10 +1,10 @@
 .profile-top-section{
   background: linear-gradient(to bottom, #61ca9d, $green);
-  height: 300px;
+  height: 333px;
   width: 400px;
   margin: auto;
-  border-radius: 5px 5px 0 0;
-  opacity: 0.9;
+  border-radius: 10px 10px 0 0;
+  opacity: 1;
 }
 .profile-container{
   padding: 50px 0;
@@ -14,8 +14,8 @@
   height: 200px;
   width: 400px;
   margin: auto;
-  border-radius: 0 0 5px 5px;
-  background: white;
+  border-radius: 0 0 10px 10px;
+  background: #262626;
 }
 .profile-avatar{
   text-align: center;
@@ -24,4 +24,15 @@
 .circle-border{
   border: 5px solid;
   border-radius: 50%;
+  border-color: palevioletred;
+}
+.small-edit-text{
+  font-size: 12px;
+}
+.profile-bio{
+  background: floralwhite;
+  margin: 0 50px 0 50px;
+  border-radius: 5px;
+  height: 100px;
+  overflow: scroll;
 }
