--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,28 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class='text-center'>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+<%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+<div class="form-inputs">
+  <%= f.input :email, required: true, autofocus: true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-    <%= f.input :photo, label: 'Profile Photo' %>
-    <%= f.input :photo_cache, as: :hidden %>
-    <%= f.input :bio, label: 'Bio', id: 'form-bio' %>
-    <%= f.input :first_name, label: 'First Name' %>
-    <%= f.input :last_name, label: 'Last name' %>
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-  </div>
-
-  <div class="form-actions">
+  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+  <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+  <% end %>
+  <%= f.input :photo, label: 'Profile Photo' %>
+  <%= f.input :photo_cache, as: :hidden %>
+  <%= f.input :bio, label: 'Bio', id: 'form-bio' %>
+  <%= f.input :first_name, label: 'First Name' %>
+  <%= f.input :last_name, label: 'Last name' %>
+  <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
+  <%= f.input :password_confirmation, required: false %>
+  <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+  <div class="form-actions text-center">
     <%= f.button :submit, "Update" %>
   </div>
+</div>
+
+
 <% end %>
 
 
