--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -46,10 +46,13 @@
         </div>
 
         <div class="event-watch">
+
           <div class="event-watch-container">
             <div class="event-watch-bookmark-toggle">
-              <%= link_to event_watchlists_path(event), method: :post  do %>
-                <i class="fas fa-heart"></i>
+              <%= link_to event_watchlists_path(event), remote: true, method: :post  do %>
+                  <div class="heart">
+                </div>
+
               <% end %>
             </div>
           </div>
@@ -67,14 +70,14 @@
             <% event.tickets.each do |ticket| %>
             <% ticket_price_array << ticket.price %>
             <% end %>
-            <% if ticket_price_array.count >= 1 %>
-              £<strong><%= ticket_price_array.min %></strong>
+            <% if ticket_price_array.count >= 1 && event.quantity != 0 %>
+            £<strong><%= ticket_price_array.min %></strong>
             <% else %>
             <% end %>
           </div>
           <div class="events-left">
             <% if event.quantity == 0%>
-            Sold out
+            <p class="sold-out-text"> Sold out </p>
             <% else %>
             <%= event.quantity %> tix left
             <% end %>
@@ -87,6 +90,12 @@
 
   <% end %>
 </div>
+
+
+
+<%= javascript_pack_tag "event-index" %>
+
+
 
 
 
