--- a/app/views/users/edit_first_name.html.erb
+++ b/app/views/users/edit_first_name.html.erb
@@ -7,9 +7,10 @@
       <% end %>
       <%= f.input :first_name, label: 'First Name' %>
       <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-    </div>
-
-    <div class="form-actions">
+      <div class="form-actions text-center">
       <%= f.button :submit, "Update" %>
     </div>
+    </div>
+
+
   <% end %>
