--- a/app/views/users/edit_profile_pic.html.erb
+++ b/app/views/users/edit_profile_pic.html.erb
@@ -8,9 +8,10 @@
       <%= f.input :photo, label: 'Profile Photo' %>
       <%= f.input :photo_cache, as: :hidden %>
       <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-    </div>
-
-    <div class="form-actions">
+      <div class="form-actions text-center">
         <%= f.button :submit, "Update" %>
     </div>
+    </div>
+
+
   <% end %>
