--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -50,8 +50,7 @@
           <div class="event-watch-container">
             <div class="event-watch-bookmark-toggle">
               <%= link_to event_watchlists_path(event), remote: true, method: :post  do %>
-                  <div class="heart">
-                </div>
+                  <div class="heart"></div>
 
               <% end %>
             </div>
