--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -106,7 +106,9 @@
   vertical-align: top;
   width: 100%;
   display: table-cell;
-  /*  border-right: 0.5px solid #CFD4D9;*/
+  a:hover {
+    text-decoration: none;
+  }
 }
 .dashboard-description-container{
   vertical-align: top;
