--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -55,7 +55,8 @@
           <div class="event-watch-container">
             <div class="event-watch-bookmark-toggle">
               <%= link_to event_watchlists_path(event), remote: true, method: :post  do %>
-                  <div class="heart"></div>
+
+                  <div class="heart" style=""></div>
 
                 <% end %>
               </div>
