--- a/app/assets/stylesheets/components/_heart.scss
+++ b/app/assets/stylesheets/components/_heart.scss
@@ -26,4 +26,17 @@
 .is_animating {
   animation: heart-burst .8s steps(28) 1;
 }
+.heart-clicked{
+ cursor: pointer;
+ height: 50px;
+ width: 50px;
+ margin-top: 8px;
+ background-image:url('https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+ background-position: left;
+ background-repeat:no-repeat;
+ background-size:2900%;
+ animation: heart-burst 1s infinity;
+ opacity:0.8;
+ background-position:right;
+}
 
