--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<div class="ticket-banner-container" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%), url('http://res.cloudinary.com/uthabc/image/upload/v1520422012/zrwmgtopq6fgwgn7pvqs.jpg');">
+<div class="ticket-banner-container" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%), url(<%= cl_image_path @event.photo_file %> );">
 
   <div class="show-ticket-container">
     <div class="banner-venue">
