--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,15 +8,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
   }
   .banner-content {
     width: 500px;
-  }
-  #search {
-    width: 90%;
-    margin: auto;
-    height: 50px;
-    color: $green;
   }
 }
 .banner h1 {
@@ -31,10 +26,9 @@
   color: $light-green;
 }
 .banner {
-  display: flex;
-  justify-content: center;
-  align-content: center;
+
 }
+
 .banner-search{
   display: relative;
 }
@@ -42,14 +36,12 @@
   opacity: 0.7;
   font-size: 24px;
 }
-#search {
-  margin: 10px 0 20px 0;
-}
 .btn-home-search {
   border-radius: 10px;
   text-transform: uppercase;
   width: 120px;
   border: none;
+  height: 50px;
   &:hover{
     background-color: $light-green;
   }
