--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -5,3 +5,11 @@
   border-radius: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
+#search {
+  margin: 10px 0 20px 0;
+  margin: auto;
+  height: 50px;
+  color: $green;
+  font-size: 22px;
+  width: -webkit-fill-available;
+}
