--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon navbar-inverse navbar-fixed-top ">
+<div class="navbar-wagon navbar-inverse">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "unitix-navbar-logo.png", height: 70 %>
